Changed cards into checkmark table and added more categories. Sizing issue still needs to be fixed.

--- a/index.html
+++ b/index.html
@@ -501,76 +501,126 @@
             <h1 class="section-heading">Membership</h1>
             <br>
             <div class="container" id="membership">
-                <div class="row flex-row flex-nowrap">
-                    <div class="col-8">
-                        <div class="card card-block">
-                            <br>
-                            <h2>General Member</h2>
-                            <hr>
-                            <ul>
-                                <li>Access to all of our general events</li>
-                                <br>
-                                <li>Opportunity to develop professional skills</li>
-                                <br>
-                                <li>Opportunity to make meaningful connections</li>
-                                <br>
-                                <li>No requirements to join</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-8">
-                        <div class="card card-block">
-                            <br>
-                            <h2>Assistant Vice President</h2>
-                            <hr>
-                            <ul>
-                                <li>Access to all of our general events</li>
-                                <br>
-                                <li>Opportunity to gain real world experience</li>
-                                <br>
-                                <li>Eligibility to become an eboard member</li>
-                            </ul>
-                            <button class="animated_button"><a
-                                    href="https://docs.google.com/forms/d/e/1FAIpQLSegnRkHPS2uy0t9yqGWRzHBNqsJQkkOSWW7oS_vh0I5ZN4qSA/viewform">Apply</a></button>
-                        </div>
-                    </div>
-                    <div class="col-8">
-                        <div class="card card-block">
-                            <br>
-                            <h2>Executive Board</h2>
-                            <hr>
-                            <ul>
-                                <li>Access to all of our general events</li>
-                                <br>
-                                <li>Opportunity to network with Ascend National Officers</li>
-                                <br>
-                                <li>Discounts on national conventions</li>
-                                <br>
-                                <li>Must be an Ascend National Member</li>
-                            </ul>
-                            <button class="animated_button"><a href="#">Not open</a></button>
-                        </div>
-                    </div>
-                    <div class="col-8">
-                        <div class="card card-block">
-                            <br>
-                            <h2>Ascend National Member</h2>
-                            <hr>
-                            <ul>
-                                <li>Access to all of our general events</li>
-                                <br>
-                                <li>Exclusive access to Ascend Metro events</li>
-                                <br>
-                                <li>Discounts on national conventions</li>
-                                <br>
-                                <li>Annual membership fee of $25</li>
-                            </ul>
-                            <button class="animated_button"><a
-                                    href="https://www.ascendleadership.org/general/register_member_type.asp?">Apply</a></button>
-                        </div>
-                    </div>
-                </div>
+                <table style="width:100%">
+                    <tr>
+                      <th></th>
+                      <th><h2>General Member</h2></th> 
+                      <th><h2>AVP</h2></th>
+                      <th><h2>E-Board</h2></th>
+                      <th><h2>National Member</h2></th>
+                    </tr>
+                    <!-- First Row of Checkboxes -->
+                    <tr>
+                      <th><h2>Access To Meetings</h2></th>
+                      <th>
+                        <img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;">
+                    </th> 
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"></th>
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"></th>
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"></th>
+                    </tr>
+                    <!-- Second Row of Checkboxes -->
+                    <tr>
+                      <th><h2>Looks Great on Resumes</h2></th>
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"> </th> 
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"></th>
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"></th>
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"></th>
+                    </tr>
+                    <!-- Third Row of Checkboxes -->
+                    <tr>
+                      <th><h2>Development of Professional Skills</h2></th>
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"> </th> 
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"></th>
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"></th>
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"></th>
+                    </tr>
+                    <!-- Fourth Row of Checkboxes -->
+                    <tr>
+                      <th><h2>Access to Free Food</h2></th>
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"> </th> 
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"></th>
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"></th>
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"></th>
+                    </tr>
+                    <!-- Fifth Row of Checkboxes -->
+                    <tr>
+                      <th><h2>Development of Social Skills</h2></th>
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"> </th> 
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"></th>
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"></th>
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"></th>
+                    </tr>
+                    <!-- Sixth Row of Checkboxes -->
+                    <tr>
+                      <th><h2>Access to ASCEND general workshops</h2></th>
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"> </th> 
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"></th>
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"></th>
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"></th>
+                    </tr><!-- Seventh Row of Checkboxes -->
+                    <!-- Eighth Row of Checkboxes -->
+                    <tr>
+                      <th><h2>Access to W3</h2></th>
+                      <th>
+                          <img src="images/svgs/X_Mark(1).svg" alt="No" style="width:75px;height:50px;">
+                          <br>
+                          (With Exception to Tech Committee Members)
+                    </th> 
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"></th>
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"></th>
+                      <th>
+                          <img src="images/svgs/X_Mark(1).svg" alt="No" style="width:75px;height:50px;">
+                          <br>
+                          (With Exception to Tech Committee Members and E-Board)
+                      </th>
+                    </tr>
+                    <!-- Nineth Row of Checkboxes -->
+                    <tr>
+                      <th><h2>Membership fee</h2></th>
+                      <th><img src="images/svgs/X_Mark(1).svg" alt="No" style="width:75px;height:50px;"> </th> 
+                      <th><img src="images/svgs/X_Mark(1).svg" alt="No" style="width:75px;height:50px;"></th>
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"></th>
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"></th>
+                    </tr>
+                    <!-- Tenth Row of Checkboxes -->
+                    <tr>
+                      <th><h2>Access to ASCEND Metro Events</h2></th>
+                      <th>
+                          <img src="images/svgs/X_Mark(1).svg" alt="No" style="width:75px;height:50px;">
+                      </th> 
+                      <th><img src="images/svgs/X_Mark(1).svg" alt="No" style="width:75px;height:50px;"></th>
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"></th>
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"></th>
+                    </tr>
+                    <!-- Eleventh Row of Checkboxes -->
+                    <tr>
+                      <th><h2>Discounts on National Conventions</h2></th>
+                      <th><img src="images/svgs/X_Mark(1).svg" alt="No" style="width:75px;height:50px;"> </th> 
+                      <th><img src="images/svgs/X_Mark(1).svg" alt="No" style="width:75px;height:50px;"></th>
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"></th>
+                      <th><img src="images/svgs/Checkmark.svg" alt="Yes" style="width:75px;height:50px;"></th>
+                    </tr>
+                    <!-- Row for Application Buttons -->
+                    <tr>
+                      <th><h2>Application Status</h2></th>
+                      <th>None Needed</th> 
+                      <th> 
+                        <button class="animated_button"><a
+                        href="#">Closed</a></button>
+                      </th>
+                      <th>
+                        <button class="animated_button"><a href="#">Closed</a></button>
+                      </th>
+                      <th>
+                        <button class="animated_button"><a
+                          href="https://www.ascendleadership.org/general/register_member_type.asp?">Apply</a></button>
+                      </th>
+                    </tr>
+                  </table>
             </div>
+            <br>
+            <br>
 
             <div class="footer">
                 <a href="https://www.facebook.com/AscendBaruch/?ref=br_rs" class="fa fa-facebook"></a>&nbsp;
